feat: enable EROFS zstd support

--- a/config/config
+++ b/config/config
@@ -5920,6 +5920,7 @@ CONFIG_EROFS_FS_XATTR=y
 CONFIG_EROFS_FS_POSIX_ACL=y
 CONFIG_EROFS_FS_SECURITY=y
 CONFIG_EROFS_FS_ZIP=y
+CONFIG_EROFS_FS_ZIP_ZSTD=y
 
 ##
 ## file: fs/exfat/Kconfig
