Update kernel to 6.12.42 and debian build to 6.12.41-1
- Update to latest 6.12 kernel
- Delete a patch from debian that was included in the upstream kernel (this must probably be reverted once debian updates the repo)
- Configure a `debianrelease` for Garden Linux as this is required in [this new commit](https://salsa.debian.org/kernel-team/linux/-/commit/76d1e2c5fab2a2a4bf7699091ff77d7cf11d40ef) in debian's kernel config

Fixes https://github.com/gardenlinux/gardenlinux/issues/3304

--- a/config/defines.toml
+++ b/config/defines.toml
@@ -26,3 +26,7 @@ breaks = [
   'fwupdate (<< 12-7)',
   'wireless-regdb (<< 2019.06.03-1~)',
 ]
+
+[[debianrelease]]
+name_regex = 'gardenlinux'
+revision_regex = '\d+gl(\d+)?(~dev)?'
