Update version regex to match nightly, dev and bp-rel versions

--- a/config/defines.toml
+++ b/config/defines.toml
@@ -29,4 +29,4 @@ breaks = [
 
 [[debianrelease]]
 name_regex = 'gardenlinux'
-revision_regex = '\d+gl(\d+)?(~dev)?'
+revision_regex = '\d+gl(\d+)?(~bp\d+)?(~dev)?'
