--- a/config/config
+++ b/config/config
@@ -5682,7 +5682,7 @@ CONFIG_FIRMWARE_EDID=y
 ##
 ## file: drivers/virt/Kconfig
 ##
-CONFIG_VIRT_DRIVERS=y
+# CONFIG_VIRT_DRIVERS is not set
 
 ##
 ## file: drivers/virtio/Kconfig
