Update Kernel to 6.18 version (#207)
Updates kernel version to 6.18 for the nightly builds

6.18 is 'stable' as of now, but documented as the next LTS version [here](https://www.kernel.org/category/releases.html)

Fixes https://github.com/gardenlinux/gardenlinux/issues/3974

--- a/config/amd64/defines.toml
+++ b/config/amd64/defines.toml
@@ -24,8 +24,6 @@ config = [
  'amd64/config.cloud-amd64',
  'config.gardenlinux'
 ]
-[flavour.defs]
-is_quick = true
 [flavour.description]
 hardware = 'x86-64 cloud'
 hardware_long = 'cloud platforms including Amazon EC2, Microsoft Azure, and Google Compute Engine'
@@ -34,8 +32,8 @@ hardware_long = 'cloud platforms including Amazon EC2, Microsoft Azure, and Goog
 name = 'none'
 
 [build]
+enable_rust = true
 enable_signed = false
-enable_vdso = true
 kernel_file = 'arch/x86/boot/bzImage'
 kernel_stem = 'vmlinuz'
 
