--- a/config/arm64/defines.toml
+++ b/config/arm64/defines.toml
@@ -25,8 +25,6 @@ config = [
  'arm64/config.cloud-arm64',
  'config.gardenlinux'
 ]
-[flavour.defs]
-is_quick = true
 [flavour.description]
 hardware = 'arm64 cloud'
 hardware_long = 'cloud platforms supporting arm64 virtual machines'
@@ -36,8 +34,8 @@ name = 'none'
 
 [build]
 compiler_gnutype_compat = 'arm-linux-gnueabihf'
+enable_rust = true
 enable_signed = false
-enable_vdso = true
 kernel_file = 'arch/arm64/boot/Image'
 kernel_stem = 'vmlinuz'
 
