FIPS Enablement failed because of dependent config missing

--- a/config/config
+++ b/config/config
@@ -74,6 +74,8 @@ CONFIG_SYSTEM_BLACKLIST_KEYRING=y
 ##
 CONFIG_CRYPTO=y
 CONFIG_CRYPTO_FIPS=y
+CONFIG_CRYPTO_SELFTESTS=y
+
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_USER=m
 # CONFIG_CRYPTO_MANAGER_DISABLE_TESTS is not set
