--- a/config/arm64/config
+++ b/config/arm64/config
@@ -665,7 +665,7 @@ CONFIG_I2C_HID_OF=m
 ##
 ## file: drivers/hv/Kconfig
 ##
-CONFIG_HYPERV=m
+CONFIG_HYPERV=y
 CONFIG_HYPERV_UTILS=m
 CONFIG_HYPERV_BALLOON=m
 
