--- a/config/kernelarch-x86/config
+++ b/config/kernelarch-x86/config
@@ -674,7 +674,7 @@ CONFIG_USB_HID=m
 ##
 ## file: drivers/hv/Kconfig
 ##
-CONFIG_HYPERV=m
+CONFIG_HYPERV=y
 CONFIG_HYPERV_UTILS=m
 CONFIG_HYPERV_BALLOON=m
 
