--- a/config/amd64/config
+++ b/config/amd64/config
@@ -17,30 +17,20 @@ CONFIG_X86_VSYSCALL_EMULATION=y
 CONFIG_NUMA=y
 CONFIG_AMD_NUMA=y
 CONFIG_X86_64_ACPI_NUMA=y
-CONFIG_NUMA_EMU=y
 CONFIG_X86_INTEL_MEMORY_PROTECTION_KEYS=y
 CONFIG_X86_SGX=y
+CONFIG_X86_USER_SHADOW_STACK=y
 CONFIG_EFI_MIXED=y
 CONFIG_RANDOMIZE_MEMORY=y
+CONFIG_ADDRESS_MASKING=y
 ## choice: vsyscall table for legacy applications
 CONFIG_LEGACY_VSYSCALL_NONE=y
 ## end choice
-CONFIG_SLS=y
+CONFIG_MITIGATION_SLS=y
 CONFIG_PCI_MMCONFIG=y
 CONFIG_ISA_DMA_API=y
 CONFIG_X86_X32_ABI=y
 CONFIG_X86_X32_DISABLED=y
-
-##
-## file: arch/x86/Kconfig.cpu
-##
-## choice: Processor family
-# CONFIG_MK8 is not set
-# CONFIG_MPSC is not set
-# CONFIG_MCORE2 is not set
-# CONFIG_MATOM is not set
-CONFIG_GENERIC_CPU=y
-## end choice
 
 ##
 ## file: arch/x86/crypto/Kconfig
@@ -58,16 +48,15 @@ CONFIG_CRYPTO_SERPENT_AVX2_X86_64=m
 CONFIG_CRYPTO_TWOFISH_X86_64=m
 CONFIG_CRYPTO_TWOFISH_X86_64_3WAY=m
 CONFIG_CRYPTO_TWOFISH_AVX_X86_64=m
-CONFIG_CRYPTO_CHACHA20_X86_64=m
 CONFIG_CRYPTO_AEGIS128_AESNI_SSE2=m
 CONFIG_CRYPTO_NHPOLY1305_SSE2=m
 CONFIG_CRYPTO_NHPOLY1305_AVX2=m
-CONFIG_CRYPTO_POLY1305_X86_64=m
-CONFIG_CRYPTO_SHA1_SSSE3=m
-CONFIG_CRYPTO_SHA256_SSSE3=m
-CONFIG_CRYPTO_SHA512_SSSE3=m
 CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL=m
-CONFIG_CRYPTO_CRCT10DIF_PCLMUL=m
+
+##
+## file: arch/x86/kvm/Kconfig
+##
+CONFIG_KVM_XEN=y
 
 ##
 ## file: arch/x86/ras/Kconfig
@@ -83,6 +72,26 @@ CONFIG_XEN_512GB=y
 ## file: crypto/asymmetric_keys/Kconfig
 ##
 CONFIG_SIGNED_PE_FILE_VERIFICATION=y
+
+##
+## file: drivers/accel/Kconfig
+##
+CONFIG_DRM_ACCEL=y
+
+##
+## file: drivers/accel/amdxdna/Kconfig
+##
+CONFIG_DRM_ACCEL_AMDXDNA=m
+
+##
+## file: drivers/accel/habanalabs/Kconfig
+##
+CONFIG_DRM_ACCEL_HABANALABS=m
+
+##
+## file: drivers/accel/ivpu/Kconfig
+##
+CONFIG_DRM_ACCEL_IVPU=m
 
 ##
 ## file: drivers/acpi/Kconfig
@@ -102,6 +111,11 @@ CONFIG_AGP=y
 CONFIG_AGP_AMD64=y
 
 ##
+## file: drivers/crypto/intel/iaa/Kconfig
+##
+CONFIG_CRYPTO_DEV_IAA_CRYPTO=m
+
+##
 ## file: drivers/cxl/Kconfig
 ##
 CONFIG_CXL_BUS=y
@@ -118,6 +132,11 @@ CONFIG_INTEL_IDXD_PERFMON=y
 ##
 CONFIG_EDAC_SBRIDGE=m
 CONFIG_EDAC_IGEN6=m
+
+##
+## file: drivers/gpu/drm/amd/amdkfd/Kconfig
+##
+CONFIG_HSA_AMD_SVM=y
 
 ##
 ## file: drivers/gpu/drm/i915/Kconfig
@@ -152,6 +171,11 @@ CONFIG_STM_SOURCE_FTRACE=m
 CONFIG_I2C_STUB=m
 
 ##
+## file: drivers/infiniband/hw/mana/Kconfig
+##
+CONFIG_MANA_INFINIBAND=m
+
+##
 ## file: drivers/input/mouse/Kconfig
 ##
 CONFIG_MOUSE_PS2_LOGIPS2PP=y
@@ -160,17 +184,25 @@ CONFIG_MOUSE_PS2_LIFEBOOK=y
 CONFIG_MOUSE_PS2_TRACKPOINT=y
 
 ##
+## file: drivers/iommu/Kconfig
+##
+CONFIG_VIRTIO_IOMMU=m
+
+##
 ## file: drivers/iommu/amd/Kconfig
 ##
 CONFIG_AMD_IOMMU=y
-#. Can be built as a module, but nothing will trigger loading
-CONFIG_AMD_IOMMU_V2=y
 
 ##
 ## file: drivers/macintosh/Kconfig
 ##
 CONFIG_MACINTOSH_DRIVERS=y
 CONFIG_MAC_EMUMOUSEBTN=y
+
+##
+## file: drivers/misc/Kconfig
+##
+CONFIG_NSM=m
 
 ##
 ## file: drivers/net/Kconfig
@@ -187,6 +219,11 @@ CONFIG_AMD_XGBE=m
 ##
 CONFIG_NET_VENDOR_GOOGLE=y
 CONFIG_GVE=m
+
+##
+## file: drivers/net/ethernet/intel/idpf/Kconfig
+##
+CONFIG_IDPF=m
 
 ##
 ## file: drivers/net/ethernet/microsoft/Kconfig
@@ -207,6 +244,7 @@ CONFIG_NVDIMM_PFN=y
 ##
 ## file: drivers/pci/Kconfig
 ##
+CONFIG_PCI_P2PDMA=y
 CONFIG_PCI_HYPERV=y
 
 ##
@@ -215,9 +253,19 @@ CONFIG_PCI_HYPERV=y
 CONFIG_PINCTRL_AMD=y
 
 ##
+## file: drivers/platform/x86/Kconfig
+##
+CONFIG_SAMSUNG_GALAXYBOOK=m
+
+##
 ## file: drivers/platform/x86/amd/pmc/Kconfig
 ##
 CONFIG_AMD_PMC=m
+
+##
+## file: drivers/platform/x86/amd/pmf/Kconfig
+##
+CONFIG_AMD_PMF=m
 
 ##
 ## file: drivers/platform/x86/intel/Kconfig
@@ -248,6 +296,17 @@ CONFIG_SCSI_INIA100=m
 ## file: drivers/spi/Kconfig
 ##
 CONFIG_SPI_PXA2XX=m
+CONFIG_SPI_AMD=m
+
+##
+## file: drivers/tee/Kconfig
+##
+CONFIG_TEE=m
+
+##
+## file: drivers/tee/amdtee/Kconfig
+##
+CONFIG_AMDTEE=m
 
 ##
 ## file: drivers/tty/Kconfig
@@ -266,6 +325,11 @@ CONFIG_FB_MATROX_MAVEN=m
 ## file: drivers/virt/coco/tdx-guest/Kconfig
 ##
 CONFIG_TDX_GUEST_DRIVER=m
+
+##
+## file: drivers/virt/nitro_enclaves/Kconfig
+##
+CONFIG_NITRO_ENCLAVES=m
 
 ##
 ## file: drivers/virtio/Kconfig
@@ -290,17 +354,9 @@ CONFIG_KEXEC_BZIMAGE_VERIFY_SIG=y
 CONFIG_LIVEPATCH=y
 
 ##
-## file: kernel/rcu/Kconfig
-##
-CONFIG_RCU_FANOUT=64
-
-##
 ## file: lib/Kconfig.debug
 ##
 CONFIG_DEBUG_INFO_BTF=y
-#. Workaround module loading of different builds of on-disk modules
-#. vs booted kernel when keeping same ABI, cf. #1003210, #1022202
-CONFIG_MODULE_ALLOW_BTF_MISMATCH=y
 CONFIG_FRAME_WARN=2048
 
 ##
@@ -309,9 +365,7 @@ CONFIG_FRAME_WARN=2048
 ## choice: Memory model
 CONFIG_SPARSEMEM_MANUAL=y
 ## end choice
-CONFIG_SPARSEMEM_VMEMMAP=y
-CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE=y
-CONFIG_ZONE_DEVICE=y
+CONFIG_NUMA_EMU=y
 
 ##
 ## file: security/Kconfig
@@ -324,3 +378,11 @@ CONFIG_LSM_MMAP_MIN_ADDR=65536
 CONFIG_SND_SOC_AMD_ACP3x=m
 CONFIG_SND_SOC_AMD_RENOIR=m
 CONFIG_SND_SOC_AMD_RENOIR_MACH=m
+
+##
+## file: sound/soc/amd/acp/Kconfig
+##
+CONFIG_SND_SOC_AMD_ACP_PCI=m
+CONFIG_SND_AMD_ASOC_RENOIR=m
+CONFIG_SND_AMD_ASOC_ACP70=m
+CONFIG_SND_SOC_AMD_LEGACY_MACH=m
