--- a/config/kernelarch-arm/config
+++ b/config/kernelarch-arm/config
@@ -9,23 +9,17 @@ CONFIG_SECCOMP=y
 CONFIG_MMU=y
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
-CONFIG_CPU_SW_DOMAIN_PAN=y
+CONFIG_ARM_PAN=y
 
 ##
 ## file: arch/arm/Kconfig.debug
 ##
-CONFIG_DEBUG_WX=y
 CONFIG_DEBUG_LL=y
 CONFIG_EARLY_PRINTK=y
 
 ##
 ## file: arch/arm/crypto/Kconfig
 ##
-CONFIG_CRYPTO_POLY1305_ARM=m
-CONFIG_CRYPTO_BLAKE2S_ARM=y
-CONFIG_CRYPTO_SHA1_ARM=m
-CONFIG_CRYPTO_SHA256_ARM=m
-CONFIG_CRYPTO_SHA512_ARM=m
 CONFIG_CRYPTO_AES_ARM=m
 
 ##
@@ -159,3 +153,8 @@ CONFIG_CRASH_DUMP=y
 ##
 CONFIG_XZ_DEC_ARM=y
 CONFIG_XZ_DEC_ARMTHUMB=y
+
+##
+## file: mm/Kconfig.debug
+##
+CONFIG_DEBUG_WX=y
