--- a/config/config
+++ b/config/config
@@ -134,7 +134,8 @@ CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_MICHAEL_MIC=m
 CONFIG_CRYPTO_POLY1305=m
 CONFIG_CRYPTO_RMD160=m
-CONFIG_CRYPTO_SHA1=m
+# We need to disable SHA1 for FIPS.
+CONFIG_CRYPTO_SHA1=n
 #. Must be built-in for IMA_DEFAULT_HASH_SHA256
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA512=m
