Disable fail-fast in PR workflow for kernel updates
Update for one branch will fail if this branch already exists, which is by design to avoid overwriting WIP pr branches. But if for example kernel 6.12 has a WIP branch, we still want to update 6.18 if there is an update. This behaviour will be fixed by setting 'fail fast' to 'false'.

--- a/.github/workflows/pr-if-new-kernel.yml
+++ b/.github/workflows/pr-if-new-kernel.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     # Matrix build for maintenance of multiple kernels
     strategy:
+      fail-fast: false
       matrix:
         branch: ['main', 'maint-6.12', 'maint-6.6']
     permissions:
