Disable SHA1 for amd64/amd64.

--- a/config/amd64/defines.toml
+++ b/config/amd64/defines.toml
@@ -4,7 +4,8 @@ name = 'amd64'
 config = [
  'amd64/config.mlx',
  'config.gardenlinux',
- 'config.tdx'
+ 'config.tdx',
+ 'config.fips'
 ]
 [flavour.defs]
 is_default = true
@@ -20,7 +21,8 @@ name = 'cloud-amd64'
 config = [
  'config.cloud',
  'config.gardenlinux',
- 'amd64/config-cloud-amd64'
+ 'amd64/config-cloud-amd64',
+ 'config.fips'
 ]
 [flavour.description]
 hardware = 'x86-64 cloud'
